--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^6.2.0",
     "glob": "^11.0.2",
     "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1",
