--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "glob": "^11.0.2",
